<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab 2</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button!</string>
    <string name="click_here">Click Here</string>
    <string name="check_this_out">Check this out!</string>
    <string name="toast_message">Here is more information</string>
    <string name="checkedOn">"The checkbox is selected"</string>
    <string name="checkedOff">"The checkbox is not selected"</string>
    <string name="switcedOn">"The switch is now On"</string>
    <string name="switcedOff">"The switch is now Off"</string>
    <string name="look_at_my_gui">Look at my GUI</string>
    <string name="switchName">"Switch On / Off "</string>
    <string name="type_here">"Type Here"</string>
    <string name="undo">"Undo"</string>
    <string name="login">"email"</string>
    <string name="type_your_password">"Type in password"</string>
    <string name="type_email_here">"type in email"</string>
    <string name="type_your_email_address">"Type in email"</string>
    <string name="enter_your_email_address">"Enter your email"</string>
    <string name="your_profile">"profile"</string>
    <string name="your_name">"Name"</string>
    <string name="enter_your_name">"Enter Name"</string>
    <string name="your_email">"Type in your email"</string>
    <string name="enter_your_email">"Enter email"</string>
    <string name="your_picture">"Add picture"</string>
    <string name="click_the_button_above_to_take_a_picture">"click the button above to take a picture""</string>
    <string name="message_send">"send message"</string>
    <string name="message_receive">"receive message"</string>
    <string name="send">"send message"</string>
    <string name="receive">"receive message"</string>
    <string name="go_to_chat">"go to chat"</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Hide">Hide</string>
    <string name="ID">ID</string>
    <string name="Message">Message</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="search_item">search</string>
    <string name="mail_item">mail</string>
    <string name="help_item">help</string>
    <string name="toolbar_btn">ToolBar</string>


</resources>