<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_at_my_gui"
        android:textSize="30sp" />

    <Button
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:id="@+id/myButton"/>

    <CheckBox
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_this_out"
        android:id="@+id/checked"/>

    <ImageButton
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:id="@+id/imgButton"
        android:background="#0000"/>


    <Switch
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchName"
        android:id="@+id/switched" />

    <EditText
        android:layout_columnWeight="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:inputType="textPersonName"
        android:layout_columnSpan="2"/>

</GridLayout>