<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_item"
        android:icon="@drawable/ic_search"
        android:orderInCategory="75"
        android:title="@string/search_item"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/mail_item"
        android:icon="@drawable/ic_mail"
        android:orderInCategory="75"
        android:title="@string/mail_item"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/help_item"
        android:icon="@drawable/ic_help"
        android:orderInCategory="75"
        android:title="@string/help_item"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/contact_item"
        android:orderInCategory="100"
        android:title="Contat Us"
        app:showAsAction="never" />

</menu>